fix(material/expansion): fix header border in high contrast mode (#23613)
Add a border between the header and its content when in high contrast mode.

--- a/src/material/expansion/expansion-panel-header.scss
+++ b/src/material/expansion/expansion-panel-header.scss
@@ -92,4 +92,9 @@
       content: '';
     }
   }
+  .mat-expansion-panel-content {
+    border-top: 1px solid;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 }
